# puck_sim

./: .env.example  .gitignore  README.md  docker-compose.yaml  postgres_db_init.sql
protobuf/: api.proto
puck_app/: README.md  analysis_options.yaml  pubspec.yaml
puck_app/android/app/: build.gradle
puck_app/ios/Runner/: Info.plist
puck_app/ios/Runner.xcodeproj/: project.pbxproj
puck_app/lib/: main.dart
puck_app/lib/features/: features.dart
puck_app/lib/features/create_team/: create_team_bloc.dart  create_team_event.dart  create_team_form_error_state.dart  create_team_form_error_state.g.dart  create_team_screen.dart  create_team_state.dart  create_team_store.dart  (+2 more)
puck_app/lib/models/: models.dart  view_state.dart
puck_app/lib/services/: puck_locator.dart  puck_repository.dart  puck_router.dart  services.dart
puck_app/lib/utilities/: form_inputs.dart  utilities.dart
puck_app/lib/widgets/: widgets.dart
puck_app/linux/: CMakeLists.txt  my_application.cc
puck_app/macos/Runner.xcodeproj/: project.pbxproj
puck_app/test/: widget_test.dart
puck_app/web/: index.html  manifest.json
puck_app/windows/: CMakeLists.txt
puck_app/windows/runner/: Runner.rc  main.cpp
puck_client/: pubspec.yaml
puck_client/example/: puck_client_example.dart
puck_client/lib/: puck_client.dart
puck_client/lib/src/: puck_client_base.dart
puck_client/test/: puck_client_test.dart
puck_server/: .dockerignore  Cargo.toml  Dockerfile  build.rs
puck_server/migrations/: 20240610234502_create_teams_table.sql
puck_server/src/: config.example.yaml  config.rs  main.rs
(+4 files in other folders)
