[package]
name = "puck_server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
prost = "0.10.4"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.7.2"
sqlx = { version = "0.6.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }

[build-dependencies]
tonic-build = "0.7.2"
