[package]
name = "puck_server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
config = "0.13"
openssl = { version = "0.10.32", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }
prost = "0.10.4"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.7.2"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.6.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "offline",
] }
serde = { version = "1.0.203", features = ["derive"] }
uuid = "1.8"

[build-dependencies]
tonic-build = "0.7.2"


